c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/bitwise_compound_assign_with_pointer.c
// No bitwise operations on pointers, including bitwise compound assignment
// with pointer as right-hand side
int main(void) {
    int *null = 0;
    int x = 100;
    x |= null;
    return 1;
}